--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* 
     This is a CSS comment. Please add your name to this file below:
     
-    NAME: 
+    NAME: Jelica Jallow
 */
 /* -------------------------------------------------- */
 /* 
@@ -264,7 +264,7 @@ p code, li code{
 }
 
 #section4 li::before{
-    content: 
+    content: "";
 }
 
 #section5 p:last-of-type{
@@ -323,16 +323,16 @@ footer{
 /* content, padding, borders, margin, dev tools, inline, & block elements */
 
 /* For both links in the section */
-/* 
-    TO DO: add styles to both links in this section that will:
-        - make these links display as block-level elements
-        - remove the underline
-        - align the text to the center
-        - make the font display at 1.1rem
-        - make the text bold
-        - tell these to be 50% wide in the container
-        - add the large box shadow
-*/
+#section2 a{
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-display: 1.1rem;
+    font-weight: bold;
+    width: 50%;
+    box-shadow: var(--box-shadow-lg);
+}
+
 /* ADD SELECTOR AND STYLES HERE */
 
 /* For the first link in this section: */
@@ -361,23 +361,12 @@ footer{
 }
 
 /* For the last paragraph in the section */
-/* 
-    TO DO: add styles to the last paragraph in this section that will:
-        - make the background the teal-rgba color
-        - add a 4 pixel dark gray border that is dashed
-        - add margin:
-            - top: 16px
-            - right: 60px
-            - bottom: 32px
-            - left: 8px
-        - add padding: 
-            - top: 32px
-            - right: 8px
-            - bottom: 16px
-            - left: 60px
-*/
+
 #section2 div > p:last-of-type{
-    
+    background-color: var(--dk-teal-rgba);
+    border: 4px dashed var(--dk-gray);
+    margin: 16px 60px 32px 8px;
+    padding: 32px 8px 16px 60px;
 }
 
  /* For the div wrapped around that paragraph to show the space its taking up within its container */
@@ -386,15 +375,12 @@ footer{
 }
 
 /* To change the styles on each of those links when you're hovering over them with a mouse */
-/* 
-    TO DO: add styles to the first link on hover in this section that will:
-        - make the background the dk-blue color
-        - make the text white
-        - change the color of the border to the lt-blue color
-        - add the small box shadow, using the variable in the root
-*/
-#section2 a:first-of-type:hover{
 
+#section2 a:first-of-type:hover{
+    background-color: var(--dk-blue);
+    color: var(--white);
+    border: var(--lt-blue);
+    box-shadow: var(--box-shadow-sm);
 }
 
 #section2 a:last-of-type:hover{
@@ -409,16 +395,13 @@ footer{
 /* Sizing with width and height */
 
 /* For the corgi graphic */
-/* 
-    TO DO: add styles to the image in this section that will:
-        - turn this into a block-level element
-        - make this display at 200px wide
-        - set the height to auto
-        - add margin to center this element
-        - add the small filter drop shadow from the CSS variables in the root
-*/
+
 #section3 img{
-    
+display: block;
+width: 200px;
+height: auto;
+margin: 0 auto;
+filter: var(--filter-shadow-sm);    
 }
 
 #section3 div::before{
@@ -446,20 +429,18 @@ footer{
     box-shadow: var(--box-shadow-sm);
 }
 
-/* 
-    TO DO: add styles to the after pseudo-element on the div in this section that will:
-        - add content (empty string)
-        - make this display as a block-level element
-        - make this 50px wide
-        - make this 50px tall
-        - make the background the lt-blue color
-        - turn this square div into a circle
-        - set the position to relative
-        - give this a z-index of 2
-        - move this up from its original location by 50px
-        - move this to the right from its original location by 25px
-*/
+
 #section3 div::after{
+    content: "";
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: var(--lt-blue);
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    top: -50%;
+    left: 25px;
 }
 
 
@@ -481,7 +462,7 @@ footer{
             - left: 0
 */
 #section4 p:last-of-type{
-
+margin: 1rem 0;
 }
 
 /* ------------- SECTION 5 STYLES ---------------- */
@@ -512,13 +493,12 @@ footer{
 
 /* For the third div, let's include the a background color, allow the image to tile, but center the tiling in the container */
 /* 
-    TO DO: add styles to the div with an ID of bg-img-3 in this section that will:
-        - add the lt-blue color to the background
-        - center the image pattern in the container
+   
         - add the puppy-photo as a repeating background to the container
 */
 #bg-img-3{
-    
+    background: var(--lt-blue) center url(images/puppy-photo.jpg);
+
 }
 
 /* For the fourth div, let's style this like the second div, but let's change the height of the div to 100px, so it fits the height of the image. It will make it look like the image and div are the same height */
@@ -538,14 +518,9 @@ footer{
 /* Background patterns with images and CSS */
 
 /* For the first div, let's add the pattern from the images folder called wood, it is from Transparent Textures. Include the lt-gray background color as well */
-/* 
-    TO DO: add styles to the div with an ID of pattern1 in this section that will:
-        - set the background color to light-gray
-        - scale the background image to 110% 
-        - add the wood background texture from the images folder
-*/
+
 #pattern1{
-    
+   background: var(--light-gray) 110% url(images/wood.png);
 }
 
 /* For the second div, the pattern is from from Hero Pattern. These actually give you SVG code to paste into your CSS */
@@ -583,11 +558,7 @@ footer{
 /* Floating content with CSS */
 
 /* Let's tell our images to float to the left. Remember, they'll sort of pile up next to each other in the container, but only if they're narrow enough to fit! */
-/* 
-    TO DO: add styles to the image with the ID of corgi in this section that will:
-        - float this image to the left
-        - add 1 rem of margin to the right of the image
-*/
+
 #corgi{
     margin-right: 1rem;
     float: left;
@@ -597,12 +568,9 @@ footer{
     margin-top: 0.5rem;
 }
 
-/* 
-    TO DO: add styles to the image with an ID of dog-house in this section that will:
-        - float the image to the right
-*/
+
 #dog-house{
-    
+    float: right;
 }
 
 /* When you use floats, you have to be sure to clear them so that the rest of your page after the floats displays normally. Let's use the display section to clear the floats (because it is the next tag outside of our container in the HTML) */
@@ -611,7 +579,7 @@ footer{
         - clear any floats
 */
 #section9{
-    
+    clear: both;
 }
 
 /* ------------- SECTION 9 STYLES ---------------- */
